flask-webapp/DeployAnmialDetection/flask-log.txt
  File "/faster/SeniorProject/AI-based-animal-recognition/flask-webapp/DeployAnmialDetection/animalDetection/backend/app.py", line 33
    return {'uploaded': 'no'}
                             ^
IndentationError: unindent does not match any outer indentation level
